Fixed Layout issues

--- a/index.css
+++ b/index.css
@@ -5,61 +5,8 @@ body {
   height: 600px;
 }
 
-@media (max-width: 991.98px) {
-  .padding {
-    padding: 1.5rem;
-  }
-}
-@media (max-width: 767.98px) {
-  .padding {
-    padding: 1rem;
-  }
-}
-.padding {
-  padding: 5rem;
-}
 .card-weather .card-body:first-child {
   background: url(https://res.cloudinary.com/dxfq3iotg/image/upload/v1557323760/weather.svg)
     no-repeat center;
   background-size: cover;
-}
-.card .card-body {
-  padding: 1.88rem 1.81rem;
-}
-.card-body {
-  flex: 1 1 auto;
-  padding: 1.25rem;
-}
-.card-weather .weather-date-location {
-  padding: 0 0 38px;
-}
-.card-subtitle,
-.text-gray {
-  color: #969696;
-}
-p {
-  font-size: 13px;
-}
-.card-weather .weather-data {
-  padding: 0 0 4.75rem;
-}
-.card-weather .card-body {
-  background: #fff;
-}
-.card-weather .weekly-weather {
-  background: #fff;
-  overflow-x: auto;
-}
-.card-weather .weekly-weather .weekly-weather-item {
-  flex: 0 0 12.51%;
-  border-right: 1px solid #f2f2f2;
-  padding: 1rem;
-  text-align: center;
-}
-.card-weather .weekly-weather .weekly-weather-item i {
-  font-size: 1.1rem;
-}
-.weekly-weather-item:hover {
-  background-color: #969696;
-  cursor: pointer;
 }
